Update author and reviewer names in index.html

--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,8 @@
                 <div style="margin-top:30px; padding-top:20px; border-top:1px solid #e2e8f0; font-size:11px; color:#64748b;">
                     <div style="display:flex; justify-content:space-between;">
                         <div>
-                            <strong>Elaboró:</strong> DIR HSEQ<br>
+                            <strong>Elaboró:</strong> COORDINADOR HSEQ<br>
+                            <strong>Revisó:</strong> DIRECTOR HSEQ/COORDINADOR HSEQ<br>
                             <strong>Fecha:</strong> 26/01/2026
                         </div>
                         <div style="text-align:right;">
