Add worker consultation and participation section
Added a section on worker consultation and participation mechanisms, including tables for participation indicators and actions implemented based on consultations.

--- a/index.html
+++ b/index.html
@@ -833,7 +833,155 @@
                 </div>
             </div>
         </div>
+<div class="card col-12">
+    <div class="card-title">4.7 CONSULTA Y PARTICIPACIÓN DE LOS TRABAJADORES</div>
+    <p style="font-size:12px; margin-bottom:15px; color:#64748b;">
+        <strong>Referencia:</strong> ISO 45001 Numerales 5.4 y 9.3.2 (e)
+    </p>
+    
+    <h4 style="font-size:13px; margin-bottom:10px; color:#334155;">A. Mecanismos de Consulta y Participación</h4>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>Mecanismo</th>
+                <th>Frecuencia</th>
+                <th>Cumplimiento 2025</th>
+                <th>Principales Aportes y Resultados</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong>COPASST</strong></td>
+                <td>Mensual</td>
+                <td><span class="tag tag-ok">100%</span></td>
+                <td>Se ejecutaron el 100% de las reuniones programadas. El comité participó activamente en la revisión de accidentes, inspecciones y validación de controles operacionales.</td>
+            </tr>
+            <tr>
+                <td><strong>Comité de Convivencia Laboral</strong></td>
+                <td>Bimestral</td>
+                <td><span class="tag tag-ok">100%</span></td>
+                <td>Se atendieron solicitudes de bienestar y se gestionó el clima laboral. No se reportaron casos de acoso laboral durante 2025.</td>
+            </tr>
+            <tr>
+                <td><strong>Tarjetas de Reporte (Actos/Condiciones Inseguras)</strong></td>
+                <td>Permanente</td>
+                <td>28 Reportes recibidos</td>
+                <td>Los trabajadores reportaron 28 condiciones/actos inseguros. Se cerró el 43% (12/28). <span class="tag tag-warn">OPORTUNIDAD:</span> Mejorar tiempo de respuesta y cierre.</td>
+            </tr>
+            <tr>
+                <td><strong>Encuestas y Solicitudes de Capacitación</strong></td>
+                <td>Según necesidad</td>
+                <td><span class="tag tag-ok">100% Atendidas</span></td>
+                <td>Se ejecutó el 100% de las solicitudes de capacitación y bienestar presentadas por los trabajadores.</td>
+            </tr>
+            <tr>
+                <td><strong>Participación en Inspecciones SST</strong></td>
+                <td>Según cronograma</td>
+                <td><span class="tag tag-ok">99% Ejecución</span></td>
+                <td>Los trabajadores participaron activamente en inspecciones de seguridad con un cumplimiento global del 99%.</td>
+            </tr>
+            <tr>
+                <td><strong>Simulacros de Emergencia</strong></td>
+                <td>Según Plan de Emergencias</td>
+                <td><span class="tag tag-ok">EFICAZ</span></td>
+                <td>Se validó la capacidad de respuesta en las 5 sedes operativas con participación activa del personal. Resultado: EFICAZ.</td>
+            </tr>
+        </tbody>
+    </table>
 
+    <h4 style="font-size:13px; margin:20px 0 10px 0; color:#334155;">B. Indicadores de Participación 2025</h4>
+    <div class="grid-container">
+        <div class="col-3">
+            <div class="kpi-box" style="background:#f0fdf4; border-radius:8px; padding:15px;">
+                <div class="kpi-sub">REUNIONES COPASST</div>
+                <div class="kpi-val" style="color:var(--success); font-size:28px;">12/12</div>
+                <div class="kpi-sub">100% Cumplimiento</div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="kpi-box" style="background:#eff6ff; border-radius:8px; padding:15px;">
+                <div class="kpi-sub">REPORTES TRABAJADORES</div>
+                <div class="kpi-val" style="color:var(--secondary); font-size:28px;">28</div>
+                <div class="kpi-sub">Tarjetas actos/condiciones</div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="kpi-box" style="background:#fef9c3; border-radius:8px; padding:15px;">
+                <div class="kpi-sub">CIERRE DE REPORTES</div>
+                <div class="kpi-val" style="color:var(--warning); font-size:28px;">43%</div>
+                <div class="kpi-sub">12 de 28 cerrados</div>
+            </div>
+        </div>
+        <div class="col-3">
+            <div class="kpi-box" style="background:#f8fafc; border-radius:8px; padding:15px;">
+                <div class="kpi-sub">INSPECCIONES SST</div>
+                <div class="kpi-val" style="color:var(--success); font-size:28px;">99%</div>
+                <div class="kpi-sub">Ejecución global</div>
+            </div>
+        </div>
+    </div>
+
+    <h4 style="font-size:13px; margin:20px 0 10px 0; color:#334155;">C. Principales Aportes de los Trabajadores en 2025</h4>
+    <div style="display:grid; grid-template-columns: repeat(2, 1fr); gap:15px;">
+        <div style="background:#f0fdf4; padding:12px; border-left:3px solid var(--success); border-radius:4px; font-size:12px;">
+            <strong style="color:#14532d;">✓ IDENTIFICACIÓN DE PELIGROS:</strong>
+            <p style="margin-top:5px;">28 reportes de condiciones y actos inseguros identificados por los trabajadores en campo, permitiendo acciones correctivas oportunas.</p>
+        </div>
+        <div style="background:#eff6ff; padding:12px; border-left:3px solid var(--secondary); border-radius:4px; font-size:12px;">
+            <strong style="color:#1e3a8a;">✓ MEJORA DE PROCEDIMIENTOS:</strong>
+            <p style="margin-top:5px;">Aportes del COPASST implementados en la actualización de procedimientos de trabajo seguro y controles operacionales.</p>
+        </div>
+        <div style="background:#fef9c3; padding:12px; border-left:3px solid var(--warning); border-radius:4px; font-size:12px;">
+            <strong style="color:#854d0e;">✓ CAPACITACIÓN:</strong>
+            <p style="margin-top:5px;">Solicitudes de capacitación técnica atendidas al 100%, mejorando competencias del personal operativo.</p>
+        </div>
+        <div style="background:#f8fafc; padding:12px; border-left:3px solid #64748b; border-radius:4px; font-size:12px;">
+            <strong style="color:#334155;">✓ CULTURA DE PREVENCIÓN:</strong>
+            <p style="margin-top:5px;">Participación activa en simulacros de emergencia validando la eficacia de los planes de respuesta en las 5 sedes.</p>
+        </div>
+    </div>
+
+    <h4 style="font-size:13px; margin:20px 0 10px 0; color:#334155;">D. Acciones Implementadas por Consulta</h4>
+    <table class="data-table">
+        <thead>
+            <tr>
+                <th>Origen de la Consulta</th>
+                <th>Acción Implementada</th>
+                <th>Estado</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><strong>Solicitud COPASST</strong></td>
+                <td>Mejoras en condiciones locativas y actualización de matriz de peligros sin cambios críticos.</td>
+                <td><span class="tag tag-ok">IMPLEMENTADO</span></td>
+            </tr>
+            <tr>
+                <td><strong>Reportes Trabajadores (Tarjetas)</strong></td>
+                <td>Gestión inmediata de 8 reportes en todas las sedes (100% cierre).</td>
+                <td><span class="tag tag-ok">CERRADOS</span></td>
+            </tr>
+            <tr>
+                <td><strong>Encuestas de Bienestar</strong></td>
+                <td>Atención a solicitudes de bienestar y capacitación (100% ejecución).</td>
+                <td><span class="tag tag-ok">EJECUTADO</span></td>
+            </tr>
+            <tr>
+                <td><strong>Retroalimentación Post-Simulacros</strong></td>
+                <td>Mejoras en planes de emergencia y equipos de respuesta.</td>
+                <td><span class="tag tag-warn">EN PROCESO</span></td>
+            </tr>
+        </tbody>
+    </table>
+
+    <div style="background:#eff6ff; padding:15px; margin-top:15px; border-left:4px solid var(--secondary); border-radius:4px;">
+        <h4 style="font-size:13px; margin-bottom:5px; color:#1e3a8a;">✓ CONCLUSIÓN CONSULTA Y PARTICIPACIÓN 2025</h4>
+        <p style="font-size:12px; line-height:1.6;">
+            Los mecanismos de consulta y participación operan de manera <strong>EFICAZ</strong>. Se evidencia compromiso activo de los trabajadores en la identificación de peligros, reporte de condiciones inseguras y participación en comités legales (COPASST, Comité de Convivencia). Las sugerencias y reportes han generado mejoras tangibles en las condiciones de trabajo.<br><br>
+            <strong>Oportunidad de Mejora 2026:</strong> Acelerar el tiempo de respuesta y cierre de tarjetas de reporte (actualmente 43% - meta: >80%). Se requiere fortalecer el seguimiento y comunicación de acciones tomadas a partir de los reportes de los trabajadores.
+        </p>
+    </div>
+</div>
         <!-- SECCIÓN 5: VERIFICACIÓN -->
         <div id="sec5" class="section-view">
             <div class="grid-container">
