Change meeting frequency from Bimestral to Trimestral

--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
             </tr>
             <tr>
                 <td><strong>Comité de Convivencia Laboral</strong></td>
-                <td>Bimestral</td>
+                <td>Trimestral</td>
                 <td><span class="tag tag-ok">100%</span></td>
                 <td>Se atendieron solicitudes de bienestar y se gestionó el clima laboral. No se reportaron casos de acoso laboral durante 2025.</td>
             </tr>
