Fix closing div tag in index.html

--- a/index.html
+++ b/index.html
@@ -980,7 +980,7 @@
             <strong>Oportunidad de Mejora 2026:</strong> Acelerar el tiempo de respuesta y cierre de tarjetas de reporte (actualmente 43% - meta: >80%). Se requiere fortalecer el seguimiento y comunicación de acciones tomadas a partir de los reportes de los trabajadores.
         </p>
     </div>
-</div>
+</div> </div> </div>
         <!-- SECCIÓN 5: VERIFICACIÓN -->
         <div id="sec5" class="section-view">
             <div class="grid-container">
