--- a/index.html
+++ b/index.html
@@ -303,13 +303,22 @@
     </div>
 
     <div class="main">
-        <div class="page-header">
-            <div class="doc-title">
-                <h1>Acta de Revisión Gerencial</h1>
-                <span>Evaluación del Periodo: Enero 2025 – Diciembre 2025</span>
-            </div>
-            <div class="status-pill"><i class="fa-solid fa-check"></i> ESTADO: FINALIZADA</div>
-        </div>
+       <div class="page-header">
+    <div class="doc-title">
+        <h1>Acta de Revisión Gerencial</h1>
+        <span>Evaluación del Periodo: Enero 2025 – Diciembre 2025</span>
+    </div>
+    
+    <div style="display:flex; gap:10px; align-items:center;">
+        <div class="status-pill"><i class="fa-solid fa-check"></i> ESTADO: FINALIZADA</div>
+        
+        <a href="AQUI_PEGAS_TU_LINK_DE_DRIVE" target="_blank" style="text-decoration:none;">
+            <button style="background:var(--danger); color:white; border:none; padding:10px 20px; border-radius:20px; cursor:pointer; font-weight:bold; display:flex; align-items:center; gap:8px; box-shadow:0 4px 6px rgba(239, 68, 68, 0.3);">
+                <i class="fa-solid fa-file-pdf"></i> Ver PDF Firmado
+            </button>
+        </a>
+    </div>
+</div>
 
         <!-- SECCIÓN 1: INFORMACIÓN GENERAL -->
         <div id="sec1" class="section-view active">
