Update link and button text in index.html

--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
     <div style="display:flex; gap:10px; align-items:center;">
         <div class="status-pill"><i class="fa-solid fa-check"></i> ESTADO: FINALIZADA</div>
         
-        <a href="AQUI_PEGAS_TU_LINK_DE_DRIVE" target="_blank" style="text-decoration:none;">
+        <a href="https://docs.google.com/document/d/1C4wzN5Sod4KkGBQLh_dnvWYG6yrwqxFcXntGLGCA12g/edit?usp=sharing" target="_blank" style="text-decoration:none;">
             <button style="background:var(--danger); color:white; border:none; padding:10px 20px; border-radius:20px; cursor:pointer; font-weight:bold; display:flex; align-items:center; gap:8px; box-shadow:0 4px 6px rgba(239, 68, 68, 0.3);">
-                <i class="fa-solid fa-file-pdf"></i> Ver PDF Firmado
+                <i class="fa-solid fa-file-pdf"></i> Ver Acta revisión PDF
             </button>
         </a>
     </div>
