--- a/index.html
+++ b/index.html
@@ -444,22 +444,39 @@
                 </div>
 
                 <div class="card col-6">
-                    <div class="card-title">3.2 ASUNTOS MATERIALES (ANÁLISIS ENERO 2025)</div>
-                    <p style="font-size:13px; margin-bottom:10px;">Se validaron <strong>26 asuntos relevantes</strong> bajo el enfoque ESG:</p>
-                    <div style="background:#f0fdf4; padding:10px; border-left:3px solid var(--success); margin-bottom:8px;">
-                        <strong style="font-size:11px; color:#14532d;">AMBIENTAL</strong>
-                        <p style="font-size:12px; margin-top:5px;">Transformación energética, descarbonización y economía circular.</p>
-                    </div>
-                    <div style="background:#eff6ff; padding:10px; border-left:3px solid var(--secondary); margin-bottom:8px;">
-                        <strong style="font-size:11px; color:#1e3a8a;">SOCIAL</strong>
-                        <p style="font-size:12px; margin-top:5px;">Derechos humanos, bienestar laboral y relacionamiento ético con comunidades.</p>
-                    </div>
-                    <div style="background:#fef9c3; padding:10px; border-left:3px solid var(--warning);">
-                        <strong style="font-size:11px; color:#854d0e;">GOBERNANZA</strong>
-                        <p style="font-size:12px; margin-top:5px;">Ciberseguridad, privacidad de la información y cumplimiento normativo (Compliance).</p>
-                    </div>
-                </div>
+    <div class="card-title">3.2 NECESIDADES Y EXPECTATIVAS PRIORIZADAS (ISO 4.2)</div>
+    
+    <p style="font-size:12px; margin-bottom:10px; color:#64748b;">
+        Asuntos materiales derivados de la Matriz de Partes Interesadas (Fuente: FOR-HSEQ- /Informe GRI ):
+    </p>
+    
+    <div style="background:#f0fdf4; padding:10px; border-left:3px solid var(--success); margin-bottom:8px;">
+        <strong style="font-size:11px; color:#14532d;">AMBIENTAL (Licencia Operativa)</strong>
+        <ul style="font-size:11px; margin-top:5px; padding-left:15px; margin-bottom:0; line-height:1.4;">
+            <li>Control de impactos (Ruido/Polvo) y atención a comunidades.</li>
+            <li>Cumplimiento estricto normatividad ANLA.</li>
+            <li>Gestión de residuos y economía circular.</li>
+        </ul>
+    </div>
 
+    <div style="background:#eff6ff; padding:10px; border-left:3px solid var(--secondary); margin-bottom:8px;">
+        <strong style="font-size:11px; color:#1e3a8a;">SOCIAL (Laboral y DDHH)</strong>
+        <ul style="font-size:11px; margin-top:5px; padding-left:15px; margin-bottom:0; line-height:1.4;">
+            <li>Prevención de accidentes y recursos COPASST.</li>
+            <li>Clima laboral, salud mental y prevención de acoso.</li>
+            <li>Empleo local y relacionamiento vecinal.</li>
+        </ul>
+    </div>
+
+    <div style="background:#fef9c3; padding:10px; border-left:3px solid var(--warning);">
+        <strong style="font-size:11px; color:#854d0e;">GOBERNANZA Y ECONÓMICO</strong>
+        <ul style="font-size:11px; margin-top:5px; padding-left:15px; margin-bottom:0; line-height:1.4;">
+            <li>Rentabilidad, transparencia y ética (Accionistas).</li>
+            <li>Solvencia y gestión de riesgos ESG (Bancos).</li>
+            <li>Cadena de suministro segura (Proveedores).</li>
+        </ul>
+    </div>
+</div>
                 <div class="card col-6">
                     <div class="card-title">3.3 GESTIÓN DE RIESGOS</div>
                     <p style="font-size:13px; line-height:1.6;">
